--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ buildscript {
 }
 plugins {
     id 'java-library'
-    id 'fabric-loom' version '1.1-SNAPSHOT'
+    id 'fabric-loom' version '1.3-SNAPSHOT'
     id 'maven-publish'
     id 'com.modrinth.minotaur' version '2.+'
     id 'org.ajoberstar.reckon' version '0.13.0'
@@ -65,7 +65,12 @@ processResources {
     inputs.property "version", project.version.toString()
 
     filesMatching("fabric.mod.json") {
-        expand "version": project.version.toString()
+        expand "version": project.version.toString(),
+                "minecraftVersion": project.minecraft_version_range,
+                "loaderVersion": ">=${project.loader_version}",
+                "fabricVersion": ">=${project.fabric_version}",
+                "kirinVersion": ">=${kirin_version}",
+                "minelpVersion": ">=${project.minelp_version}"
     }
 
     from 'LICENSE'
@@ -89,6 +94,7 @@ modrinth {
     versionNumber = version.toString()
     versionName = archivesBaseName + '-' + version
     changelog = "[Changelog](https://github.com/Sollace/Presence-Footsteps/releases/tag/${version.toString()})"
+    loaders = ['fabric', 'quilt']
     uploadFile = remapJar
     outlet.mcVersions().each{ver ->
       gameVersions.add ver
