--- a/build.gradle
+++ b/build.gradle
@@ -50,6 +50,7 @@ dependencies {
     modApi fabricApi.module("fabric-api-base", project.fabric_version)
     modApi fabricApi.module("fabric-lifecycle-events-v1", project.fabric_version)
     modApi fabricApi.module("fabric-key-binding-api-v1", project.fabric_version)
+    modApi fabricApi.module("fabric-screen-api-v1", project.fabric_version)
     modApi fabricApi.module("fabric-resource-loader-v0", project.fabric_version)
 
     modApi "com.minelittlepony:kirin:${project.kirin_version}"
