--- a/gradle.properties
+++ b/gradle.properties
@@ -3,10 +3,10 @@ org.gradle.daemon=false
 
 # Fabric Properties
   # check these on https://fabricmc.net/develop
-  minecraft_version=1.20.2-rc1
-  yarn_mappings=1.20.2-rc1+build.2
-  loader_version=0.14.22
-  fabric_version=0.88.5+1.20.2
+  minecraft_version=1.20.4
+  yarn_mappings=1.20.4+build.1
+  loader_version=0.15.1
+  fabric_version=0.91.2+1.20.4
 
 # Mod Properties
   group=com.presencefootsteps
@@ -16,12 +16,12 @@ org.gradle.daemon=false
   url=http://presencefootsteps.ha3.eu
 
 # Publishing
-  minecraft_version_range=>=1.20.2
+  minecraft_version_range=>=1.20.3
   modrinth_loader_type=fabric
   modrinth_project_id=rcTfTZr3
 
 # Dependencies
-  modmenu_version=8.0.0-beta.1
-  minelp_version=4.11.0+1.20.2
-  kirin_version=1.16.0+1.20.2
+  modmenu_version=9.0.0-pre.1
+  minelp_version=4.11.5+1.20.2
+  kirin_version=1.17.0+1.20.4
   pehkui_version=3.7.2
